--- a/common/sen0609-base.yaml
+++ b/common/sen0609-base.yaml
@@ -1,6 +1,6 @@
 binary_sensor:
   - platform: gpio
-    name: Occupancy
+    name: "Occupancy"
     id: mmwave
     device_class: occupancy
     pin:
@@ -22,11 +22,11 @@ uart:
 
 light:
   - platform: binary
-    name: mmWave LED
+    name: "mmWave LED"
     restore_mode: RESTORE_DEFAULT_OFF
     output: mmwave_led_output
     entity_category: config
-    disabled_by_default: False
+    disabled_by_default: false
 
 output:
   - platform: template
@@ -49,9 +49,9 @@ output:
 
 switch:
   - platform: template
-    name: mmWave sensor
+    name: "mmWave Sensor"
     id: mmwave_sensor
-    disabled_by_default: True
+    disabled_by_default: true
     entity_category: config
     optimistic: true
     restore_mode: RESTORE_DEFAULT_ON
@@ -63,7 +63,7 @@ switch:
       - delay: 1s
 
   - platform: template
-    name: UART presence output
+    name: "UART Presence Output"
     id: uart_presence_output
     entity_category: config
     disabled_by_default: true
@@ -86,7 +86,7 @@ switch:
       - switch.turn_on: mmwave_sensor
 
   - platform: template
-    name: UART target output
+    name: "UART Target Output"
     id: uart_target_output
     entity_category: config
     disabled_by_default: true
@@ -112,38 +112,40 @@ switch:
 number:
   - platform: template
     id: mmwave_distance_min
-    name: mmWave Minimum Distance
+    name: "mmWave Minimum Distance"
     icon: mdi:arrow-left-right
     entity_category: config
-    min_value: 0
-    max_value: 25
-    initial_value: 0
+    min_value: 0.6
+    max_value: 25.0
+    initial_value: 0.6
     optimistic: true
     step: 0.1
     restore_value: true
     unit_of_measurement: m
     mode: slider
+
   - platform: template
     id: mmwave_distance_max
-    name: mmWave Max Distance
+    name: "mmWave Max Distance"
     icon: mdi:arrow-left-right
     entity_category: config
-    min_value: 0
-    max_value: 25
-    initial_value: 12
+    min_value: 0.6
+    max_value: 25.0
+    initial_value: 12.0
     optimistic: true
     step: 0.1
     restore_value: true
     unit_of_measurement: m
     mode: slider
+
   - platform: template
-    id: mmwave_range_reduced
-    name: mmWave Range Reduced
+    id: mmwave_trigger_range
+    name: "Trigger Range (mmWave)"
     icon: mdi:arrow-left-right
     entity_category: config
-    min_value: 0
-    max_value: 25
-    initial_value: 0.8
+    min_value: 2.4
+    max_value: 25.0
+    initial_value: 6.0
     optimistic: true
     step: 0.1
     restore_value: true
@@ -153,63 +155,75 @@ number:
       - switch.turn_off: mmwave_sensor
       - delay: 1s
       - uart.write: !lambda
-          std::string ms = "setTrigRange " + to_string(x);
-          return std::vector<unsigned char>(ms.begin(), ms.end());
+          // Retrieve current values from the two sensors
+          float trigger_value = x;
+          float detection_max = id(mmwave_distance_max).state;
+          // If the trigger exceeds the maximum detection range, clip it
+          if (trigger_value > detection_max) {
+            ESP_LOGW("mmwave", "Trigger (%.1f m) exceeds detection max (%.1f m). Using max value.", trigger_value, detection_max);
+            trigger_value = detection_max;
+          }
+          char buf[8];
+          sprintf(buf, "%.1f", trigger_value);
+          std::string cmd = std::string("setTrigRange ") + buf;
+          return std::vector<uint8_t>(cmd.begin(), cmd.end());
       - delay: 1s
       - uart.write: "saveConfig"
       - delay: 1s
       - switch.turn_on: mmwave_sensor
 
   - platform: template
-    name: mmWave off latency
+    name: "mmWave Off Latency"
     icon: mdi:clock-end
     entity_category: config
     id: mmwave_off_latency
     min_value: 1
-    max_value: 600
+    max_value: 1500
     initial_value: 15
     optimistic: true
-    step: 5
+    step: 1
     restore_value: true
     unit_of_measurement: seconds
     mode: slider
     set_action:
       - switch.turn_off: mmwave_sensor
       - delay: 1s
-      - uart.write: !lambda |-
-          std::string mss = "setLatency " + to_string(id(mmwave_on_latency).state) + " " + to_string(id(mmwave_off_latency).state);
-          return std::vector<unsigned char>(mss.begin(), mss.end());
+      - uart.write: !lambda
+          char buf[32];
+          sprintf(buf, "setLatency %.1f %.1f", id(mmwave_on_latency).state, id(mmwave_off_latency).state);
+          return std::vector<uint8_t>(buf, buf + strlen(buf));
       - delay: 1s
       - uart.write: "saveConfig"
       - delay: 1s
       - switch.turn_on: mmwave_sensor
 
   - platform: template
-    name: mmWave on latency
+    name: "mmWave On Latency"
     icon: mdi:clock-start
     id: mmwave_on_latency
     entity_category: config
-    min_value: 0
-    max_value: 2
-    initial_value: 0
+    min_value: 0.5
+    max_value: 100
+    initial_value: 0.5
     optimistic: true
-    step: 0.25
+    step: 0.5
     restore_value: true
     unit_of_measurement: seconds
     mode: slider
     set_action:
       - switch.turn_off: mmwave_sensor
       - delay: 1s
-      - uart.write: !lambda |-
-          std::string mss = "setLatency " + to_string(id(mmwave_on_latency).state) + " " + to_string(id(mmwave_off_latency).state);
-          return std::vector<unsigned char>(mss.begin(), mss.end());
+      - uart.write: !lambda
+          char buf[32];
+          sprintf(buf, "setLatency %.1f %.1f", id(mmwave_on_latency).state, id(mmwave_off_latency).state);
+          return std::vector<uint8_t>(buf, buf + strlen(buf));
       - delay: 1s
       - uart.write: "saveConfig"
       - delay: 1s
       - switch.turn_on: mmwave_sensor
 
   - platform: template
-    name: mmWave Sustain Sensitivity
+    name: "mmWave Sustain Sensitivity"
     icon: mdi:target-variant
     id: mmwave_sensitivity
     entity_category: config
@@ -221,7 +235,7 @@ number:
     restore_value: true
 
   - platform: template
-    name: mmWave Trigger Sensitivity
+    name: "mmWave Trigger Sensitivity"
     icon: mdi:target-variant
     id: mmwave_trigger_sensitivity
     entity_category: config
@@ -241,8 +255,19 @@ button:
       - switch.turn_off: mmwave_sensor
       - delay: 1s
       - uart.write: !lambda
-          std::string ms = "setRange " + to_string(id(mmwave_distance_min).state) + " " + to_string(id(mmwave_distance_max).state);
-          return std::vector<unsigned char>(ms.begin(), ms.end());
+          std::string buf;
+          {
+            char tmp[16];
+            sprintf(tmp, "%.1f", id(mmwave_distance_min).state);
+            buf += tmp;
+          }
+          buf = "setRange " + buf + " ";
+          {
+            char tmp[16];
+            sprintf(tmp, "%.1f", id(mmwave_distance_max).state);
+            buf += tmp;
+          }
+          return std::vector<uint8_t>(buf.begin(), buf.end());
       - delay: 1s
       - uart.write: "saveConfig"
       - delay: 1s
@@ -255,23 +280,25 @@ button:
     on_press:
       - switch.turn_off: mmwave_sensor
       - delay: 1s
-      - uart.write:
-          !lambda std::string mss = "setSensitivity " + to_string(id(mmwave_sensitivity).state) + " " + to_string(id(mmwave_trigger_sensitivity).state);
-          return std::vector<unsigned char>(mss.begin(), mss.end());
+      - uart.write: !lambda
+          char buf[32];
+          sprintf(buf, "setSensitivity %d %d", (int)id(mmwave_sensitivity).state, (int)id(mmwave_trigger_sensitivity).state);
+          return std::vector<uint8_t>(buf, buf + strlen(buf));
       - delay: 1s
       - uart.write: "saveConfig"
       - delay: 1s
       - switch.turn_on: mmwave_sensor
 
   - platform: template
-    name: Restart mmWave Sensor
+    name: "Restart mmWave Sensor"
     id: restart_mmwave
     entity_category: config
     internal: true
     on_press:
       - uart.write: "resetSystem"
+
   - platform: template
-    name: Factory Reset mmWave
+    name: "Factory Reset mmWave"
     icon: mdi:cog-counterclockwise
     id: factory_reset_mmwave
     disabled_by_default: true
@@ -282,3 +309,26 @@ button:
       - uart.write: "resetCfg"
       - delay: 3s
       - switch.turn_on: mmwave_sensor
+
+  - platform: template
+    name: "Get Sensor Settings"
+    id: get_sensor_settings
+    entity_category: config
+    on_press:
+      - uart.write: "getSWV"
+      - delay: 500ms
+      - uart.write: "getHWV"
+      - delay: 500ms
+      - uart.write: "getRange"
+      - delay: 500ms
+      - uart.write: "getTrigRange"
+      - delay: 500ms
+      - uart.write: "getSensitivity"
+      - delay: 500ms
+      - uart.write: "getLatency"
+      - delay: 500ms
+      - uart.write: "getPwm"
+      - delay: 500ms
+      - uart.write: "getGpioMode"
+      - delay: 500ms
+      - uart.write: "getStatus"
