Reduce CO2 value reporting by delta filter
Synchronize CO2 value reporting with illuminance value reporting.

--- a/common/modules/co2.yaml
+++ b/common/modules/co2.yaml
@@ -27,6 +27,10 @@ sensor:
     co2:
       name: "CO2"
       id: "co2"
+      filters:
+        - or:
+          - delta: 5%
+          - delta: 5      
     automatic_self_calibration: false
 
 button:
