--- a/common/everything-presence-lite-base.yaml
+++ b/common/everything-presence-lite-base.yaml
@@ -84,9 +84,15 @@ binary_sensor:
       inverted: true
     id: flash_button
     internal: True
+    filters:
+      - delayed_on: 50ms 
     on_multi_click:
       - timing:
-        - ON for at least 10s
+          - ON for 0.2s to 3s
+          - OFF for 0.1s to 2s
+          - ON for 0.2s to 3s
+          - OFF for 0.1s to 2s
+          - ON for at least 5s 
         then:
           - repeat: 
               count: 5
