Fix "Duplicate binary_sensor entity with name 'Occupancy' found" compiler error

--- a/common/ld2410-base.yaml
+++ b/common/ld2410-base.yaml
@@ -23,7 +23,7 @@ binary_sensor:
       name: Still Target
   - platform: gpio
     pin: 18
-    name: Occupancy
+    name: Occupancy GPIO
     device_class: Occupancy
 
 sensor:
